# mifi_python_1

./: .gitignore  README.md  asciinema.cast  pyproject.toml
labyrinth_game/: __init__.py  constants.py  main.py  player_actions.py  utils.py
