[tool.poetry]
name = "labyrinth-treasure"
version = "0.1.0"
description = "Консольная текстовая игра «Лабиринт сокровищ»."
authors = ["Student <student@example.com>"]
packages = [{ include = "labyrinth_game" }]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.0"

[tool.poetry.scripts]
project = "labyrinth_game.main:main"

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["venv", ".venv", "dist", "__pycache__", ".ruff_cache"]

[tool.ruff.lint]
select = ["E", "F", "I"]
